--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,6 @@
 
 language: cpp
 
-sudo: false
-
 branches:
   only:
     - master
@@ -107,6 +105,8 @@ install:
   - cd ..
   - git clone -b $BOOST_BRANCH https://github.com/boostorg/boost.git boost-root
   - cd boost-root
+  - git submodule update --init tools/boost_install
+  - git submodule update --init libs/headers
   - git submodule update --init tools/build
   - git submodule update --init libs/config
   - git submodule update --init tools/boostdep
