--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,6 +4,18 @@ endif()
 
 add_library(boost_heap_test_common INTERFACE)
 
+include(BoostTest)
+
+if (BOOST_HEAP_BUILD_TESTS)
+    set(BUILD_TESTING TRUE)
+endif()
+
+
+if (NOT BUILD_TESTING AND NOT TARGET tests)
+    add_custom_target(tests)
+endif()
+
+
 if (CMAKE_VERSION VERSION_GREATER_EQUAL 3.23)
   target_sources(boost_heap_test_common PUBLIC FILE_SET HEADERS FILES
       common_heap_tests.hpp
@@ -29,19 +41,23 @@ set(Tests
 )
 
 foreach(Test ${Tests})
-    # Test target
-    add_executable(boost_heap_${Test} ${Test}.cpp )
+    set (Libs Boost::heap
+              Boost::unit_test_framework
+              Boost::container
+              Boost::foreach
+              boost_heap_test_common)
+
     source_group( TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${Test}.cpp)
 
-    target_include_directories(boost_heap_${Test} PRIVATE . )
-    target_link_libraries(boost_heap_${Test} PRIVATE
-        Boost::heap
-        Boost::unit_test_framework
-        Boost::container
+    boost_test(
+        TYPE run
+        PREFIX boost_heap
+        NAME ${Test}
+        SOURCES ${Test}.cpp
+        LINK_LIBRARIES ${Libs}
     )
 
-
-    # CTest Target
-    add_test(NAME boost_heap_${Test} COMMAND boost_heap_${Test})
-    add_dependencies(boost_heap_all_tests boost_heap_${Test} )
+    if (TARGET boost_heap-${Test})
+        add_dependencies(boost_heap_all_tests boost_heap-${Test} )
+    endif()
 endforeach()
