heap: use c++14 wherever possible
* remove c++11 workarounds
* use std type traits
* use std::array
* use nullptr
* use noexcept

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,17 +131,17 @@ jobs:
           #   supported: true
 
           # macos
-          - description: macos-11
-            toolset: clang
-            cxxstd: "14,17,2a"
-            os: macos-11
-            supported: true
-          - description: macos-12
+          - description: macos-13
             toolset: clang
             cxxstd: "14,17,20"
             os: macos-11
             supported: true
-          - description: macos-13
+          - description: macos-14
+            toolset: clang
+            cxxstd: "14,17,20"
+            os: macos-11
+            supported: true
+          - description: macos-15
             toolset: clang
             cxxstd: "14,17,20"
             os: macos-11
@@ -253,40 +253,32 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - description: msvc-14.2-32
-            toolset: msvc-14.2
-            cxxstd: "14,17"
-            cxxflags: "cxxflags=-D_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING=1"
-            supported: true
-            addrmd: 32
+          - toolset: msvc-14.0
+            cxxstd: "14,latest"
+            addrmd: 32,64
             os: windows-2019
-          - description: msvc-14.3-32
-            toolset: msvc-14.3
-            cxxstd: "14,17,20"
-            cxxflags: "cxxflags=-D_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING=1"
             supported: true
-            addrmd: 32
+          - toolset: msvc-14.2
+            cxxstd: "14,17,20,latest"
+            addrmd: 32,64
             os: windows-2019
-          - description: msvc-14.2-64
-            toolset: msvc-14.2
-            cxxstd: "14,17"
-            cxxflags: "cxxflags=-D_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING=1"
             supported: true
-            addrmd: 64
-            os: windows-2019
-          - description: msvc-14.3-64
-            toolset: msvc-14.3
-            cxxstd: "14,17,20"
-            cxxflags: "cxxflags=-D_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING=1"
+          - toolset: msvc-14.3
+            cxxstd: "14,17,20,latest"
+            addrmd: 32,64
+            os: windows-2022
             supported: true
-            addrmd: 64
-            os: windows-2019
+          - toolset: clang-win
+            cxxstd: "14,17,20,latest"
+            addrmd: 32,64
+            os: windows-2022
+            supported: true
           - toolset: gcc
             cxxstd: "14,17,2a"
             addrmd: 64
-            cxxflags: "cxxflags=-Wa,-mbig-obj"
-            supported: true
             os: windows-2019
+            supported: true
+
 
     needs: [runner-selection]
     # runs-on: ${{ fromJSON(needs.runner-selection.outputs.labelmatrix)[matrix.os] }}
