--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
             install: clang-12
             compiler: clang++-12
             cxxstd: "14,17,20"
-            os: ubuntu-22.04
+            os: ubuntu-20.04
             supported: true
           - toolset: clang
             install: clang-13
@@ -92,12 +92,25 @@ jobs:
             cxxstd: "14,17,20"
             os: ubuntu-22.04
             supported: true
-          # - toolset: clang
-          #   install: clang-16
-          #   compiler: clang++-16
-          #   cxxstd: "14,17,20"
-          #   os: ubuntu-22.04
-          #   supported: true
+          - toolset: clang
+            install: clang-16
+            compiler: clang++-16
+            cxxstd: "14,17,20"
+            os: ubuntu-24.04
+            supported: true
+          - toolset: clang
+            compiler: clang++-17
+            cxxstd: "14,17,20,2b"
+            os: ubuntu-24.04
+            install: clang-17
+            supported: true
+          - toolset: clang
+            compiler: clang++-18
+            cxxstd: "14,17,20,2b"
+            os: ubuntu-24.04
+            install: clang-18
+            supported: true
+
 
           # macos
           - description: macos-13
